--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h1>&nbsp; Hi! I am Karan Pareek. &nbsp;</h1>
             <h3 class="hidden" id="description">Building tech for a better world...
                 <br>
-                Software engineer <br>Web Developer 
+                Software engineer <br>Web Developer <br> UI/UX Designer
             </h3>
             <br><br><br>
             <h3 class="hidden" id="menu">
