--- a/about.html
+++ b/about.html
@@ -59,7 +59,8 @@
 <body>
     <div class="container">
         <h1>About me</h1>
-        <p>Proficient in developing scalable and efficient solutions with a strong foundation in Java, HTML, CSS, JavaScript, and basic knowledge of C and SQL. Demonstrates excellent leadership skills, problem-solving abilities, adaptability, and a strong team spirit, with experience in collaborating on cross-functional initiatives.</p>
+        <p>A highly motivated and results-driven Web Developer with a strong foundation in Java, HTML, CSS, JavaScript, and hands-on experience with modern frameworks such as React, Node.js, Express, and MongoDB. Proficient in developing responsive, user-friendly, and scalable web applications with a focus on clean code and performance.Experienced in implementing effective On-Page and Off-Page SEO practices to support web visibility and performance.Equipped with excellent problem-solving abilities, leadership skills, adaptability, and a strong team spirit, with experience collaborating on cross-functional projects. Eager to contribute to a growth-oriented organization while continuously learning and enhancing technical expertise.
+            </p>
     </div>
     <div class="footer">
         <h5 id="menu">
